# AiAp_MiniProj_1

./: .gitignore  find_nemo.py  get_data.py  helper.py  main.py  optimal.ipynb  overfitting.ipynb  pyproject.toml  run_blue.py  setup.py  setup.sh  test.ipynb  underfitting.ipynb
