[project]
name = "aiap-miniproj-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "pillow>=12.1.1",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
]
