[project]
name = "aiap-miniproj-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.0",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "pillow>=12.1.1",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
    "sciKeras>=0.13.0",
    "blue>=0.9.1",
    "keras-tuner>=1.4.8",
    "tensorboard>=2.20.0",
]
